# DataBase

HW_DBManager/: CMakeLists.txt  main.cpp
HW_DatabaseCxx/: CMakeLists.txt  main.cpp
